[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["Nicholas L <nicholas-l@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.53.1"
itertools = "0.13.0"
nom = "7.1.3"
rayon = "1.10.0"
regex = "1.10.6"
lazy_static = "1.5.0"
num-integer = "0.1.46"
ahash = "0.8.11"
petgraph = "0.6.5"
nalgebra = "0.33.0"
num-traits = "0.2.17"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
