[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["Nicholas L <nicholas-l@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.56.0"
itertools = "0.14.0"
rayon = "1.11.0"
regex = "1.12.1"
lazy_static = "1.5.0"
num-integer = "0.1.46"
ahash = "0.8.12"
petgraph = "0.8.3"
nalgebra = "0.34.1"
num-traits = "0.2.17"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "benchmark"
harness = false
